--- a/color-bolts/build.gradle
+++ b/color-bolts/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
 
     defaultConfig {
         minSdkVersion 14
@@ -22,7 +21,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'org.dmfs:jems:' + JEMS_VERSION
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:' + SUPPORT_LIBRARY_VERSION
+    implementation 'org.dmfs:jems:' + JEMS_VERSION
+
+    testImplementation 'junit:junit:4.12'
 }
