--- a/color-bolts/build.gradle
+++ b/color-bolts/build.gradle
@@ -22,7 +22,10 @@ android {
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:' + SUPPORT_LIBRARY_VERSION
+    implementation 'com.android.support:support-core-utils:' + SUPPORT_LIBRARY_VERSION
     implementation 'org.dmfs:jems:' + JEMS_VERSION
 
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.dmfs:jems-testing:' + JEMS_VERSION
+    testImplementation 'org.robolectric:robolectric:' + ROBOLECTRIC_VERSION
 }
