--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,5 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 SUPPORT_LIBRARY_VERSION=25.4.0
-JEMS_VERSION=1.9
+JEMS_VERSION=1.13
+ROBOLECTRIC_VERSION=3.1.4
