--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':demo', ':color-bolts', ':permission-bolts', ':service-bolts'
+include ':demo', ':color-bolts', ':permission-bolts', ':service-bolts', ':package-bolts'
