Add testing-bolts with ParcelableMatcher, implements #24 (#25)
This adds a Matcher which allows to test Parcelables for correct parcelling and unparcelling.
It add the test candidate to a parcels, reads it back and passes it to another Matcher to test it.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':demo', ':color-bolts', ':permission-bolts', ':service-bolts', ':package-bolts'
+include ':demo', ':color-bolts', ':permission-bolts', ':service-bolts', ':package-bolts', ':testing-bolts'
