--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,7 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 SUPPORT_LIBRARY_VERSION=25.4.0
-JEMS_VERSION=1.14
+JEMS_VERSION=1.18
 ROBOLECTRIC_VERSION=3.1.4
+HAMCREST_VERSION=1.3
+JUNIT_VERSION=4.12
