--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ android:
     - tools
     - platform-tools
     - tools
-    - build-tools-26.0.2
+    - build-tools-28.0.3
     - android-24
     - android-25
     - android-26
+    - android-28
+    - android-29
     - extra-android-m2repository
     - sys-img-armeabi-v7a-android-24
 
