--- a/color-bolts/build.gradle
+++ b/color-bolts/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
@@ -25,9 +25,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:' + SUPPORT_LIBRARY_VERSION
-    implementation 'com.android.support:support-core-utils:' + SUPPORT_LIBRARY_VERSION
-    implementation 'org.dmfs:jems:' + JEMS_VERSION
+    api 'androidx.annotation:annotation:1.1.0'
+    api 'org.dmfs:jems:' + JEMS_VERSION
+
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.dmfs:jems-testing:' + JEMS_VERSION
