--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,9 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-SUPPORT_LIBRARY_VERSION=25.4.0
-JEMS_VERSION=1.18
+JEMS_VERSION=1.24
 ROBOLECTRIC_VERSION=3.1.4
 HAMCREST_VERSION=1.3
 JUNIT_VERSION=4.12
+android.useAndroidX=true
+android.enableJetifier=true
