--- a/package-bolts/build.gradle
+++ b/package-bolts/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
@@ -25,7 +25,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:' + SUPPORT_LIBRARY_VERSION
+    api 'androidx.annotation:annotation:1.1.0'
     implementation 'org.dmfs:jems:' + JEMS_VERSION
 
     testImplementation 'junit:junit:4.12'
