--- a/testing-bolts/build.gradle
+++ b/testing-bolts/build.gradle
@@ -18,15 +18,15 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
@@ -43,7 +43,6 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:' + SUPPORT_LIBRARY_VERSION
     implementation 'org.dmfs:jems:' + JEMS_VERSION
     api 'org.hamcrest:hamcrest-all:' + HAMCREST_VERSION
 
